syntax = "proto3";

package weather.v1;

message Weather {
  string location = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  int32 pressure = 4;
}

service WeatherService {
  rpc Get (WeatherServiceGetRequest) returns (WeatherServiceGetResponse);
  rpc Add (Weather) returns (WeatherServiceAddResponse);
  rpc Update (Weather) returns (WeatherServiceUpdateResponse);
  rpc Delete (Weather) returns (WeatherServiceDeleteResponse);
}

message WeatherServiceGetRequest {
  string location = 1;
}

message WeatherServiceGetResponse {
  repeated Weather weather = 1;
}

message WeatherServiceAddRequest {
  string location = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  int32 pressure = 4;
}

message WeatherServiceAddResponse {
  Weather weather = 1;
}

message WeatherServiceUpdateRequest {
  string location = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  int32 pressure = 4;
}

message WeatherServiceUpdateResponse {
  Weather weather = 1;
}

message WeatherServiceDeleteRequest {
  string location = 1;
}

message WeatherServiceDeleteResponse {
  Weather weather = 1;
}
